--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,11 +17,13 @@
     </div>
   </div>
 
+<hr>
 
+<div class="resumeContainer">
+  <img src="../assets/images/latestResume.png" alt="resume">
+</div>
 
-
-
-
+<hr>
 
 
 <div class="menu-item">
@@ -29,6 +31,9 @@
     <span class="somethingAwesome">SOMETHING AWESOME</span>
   </a>
 </div>
+
+
+
 <!-- the animation triggers here: [@goals]="goals.length"-->
 <div class="container color-light" [@goals]="goals.length">
   <div class="col">
