added google doc

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
   </p>
 
   <ul>
-    <li *ngFor="let goal of goals">{{goal}}</li>
+    <li *ngFor="let goal of goals">{{goalie}}</li>
   </ul>
 
 </div>
