--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,17 +20,17 @@
 <hr>
 
 <div class="resumeContainer">
-  <img src="../assets/images/latestResume.png" alt="resume">
+  <iframe src="https://drive.google.com/file/d/1Jtc5CJXVwnxr8ytQ-N0YoC8VLjo9I5Gr/preview"></iframe>
 </div>
 
 <hr>
 
 
-<div class="menu-item">
+<!-- <div class="menu-item">
   <a href="#">
     <span class="somethingAwesome">SOMETHING AWESOME</span>
   </a>
-</div>
+</div> -->
 
 
 
