--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <ul>
   <li>
-    <a routerLink="/">Home</a>
+    <a routerLink="/">Root</a>
   </li>
   <li>
-    <a routerLink="/about">About</a>
+    <a routerLink="/about">Spirited Away</a>
+  </li>
+  <li>
+    <a routerLink="/heroes">Heroes</a>
   </li>
 </ul>
 
