--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -3,42 +3,52 @@
     <h1 class="display-4">Data Binding</h1>
     <p class="lead">Below is an art work of data binding, where components handles functionality and controls the DOM. Dual binding also
       is at work as both DOM and Component talks to each other and creates changes as user interact with the page.</p>
+      <p class="lead">
+
+        The buttons are controlling the images using property binding, another one way binding.  The button tag uses an event listener (on click) and calls a function declared
+        inside the component.ts file.
+
+      </p>
   </div>
 </div>
 
 
-
+<!-- cards here with three columns -->
 <div class="row">
-
   <div class="col-4">
     <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="../assets/images/spngeBob.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="{{imageHappy1}}" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">{{heroName}}</h5>
+        <h5 class="card-title">SpongeBob</h5>
+        <ul>
+          <li>{{skill}}</li>
+        </ul>
+        <input type="text" class="form-control" [(ngModel)]="characterInfo1" placeholder="character info">
+        <button type="submit" class="btn btn-primary" (click)="addInfo1()">add-info</button>
         <p class="card-text">Name above is displayed via one way binding using `interpolation`. Check the code under hero.component.ts and hero.component.html</p>
-        <a href="#" class="btn btn-primary">select</a>
+        <button href="#" class="btn btn-primary" [disabled]="btnDisabled" (click)="player1Info()">Angrify</button>
       </div>
     </div>
   </div>
 
   <div class="col-4">
     <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="../assets/images/squidWord.jpeg" alt="Card image cap">
+      <img class="card-img-top" src="{{imageHappy2}}" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">{{heroName}}</h5>
+        <h5 class="card-title">{{player2}}</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">select</a>
+        <button href="#" class="btn btn-primary" [disabled]="btnDisabled" (click)="player2Info()">Angrify</button>
       </div>
     </div>
   </div>
 
   <div class="col-4">
     <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="../assets/images/patrick.png" alt="Card image cap">
+      <img class="card-img-top" src="{{imageHappy3}}" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">{{heroName}}</h5>
+        <h5 class="card-title">{{player3}}</h5><!-- interpolation -->
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">select</a>
+        <button href="#" class="btn btn-primary" [disabled]="btnDisabled" (click)="player3Info()">Angrify</button>
       </div>
     </div>
   </div>
