--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -1,3 +1,11 @@
 p {
-  font-size: 12px;
+  font-size: 19px;
+  text-align: justify;
+}
+img {
+  height: 50%;
+  width: 50%
+}
+li{
+  font-size: 15px;
 }
