--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -28,53 +28,70 @@
         <hr>
         <input type="text" class="form-control" [(ngModel)]="characterInfo1" placeholder="{{player1}} is...">
         <br>
+        <!-- use of structural directive using *ngFor -->
         <ul *ngFor="let skill of skills">
-          <li>-{{skill}}</li>
+          <!-- use of attribute directives using [ngClass] -->
+          <li [ngClass]="{'text-warning': skill === 'funny'}">-{{skill}}</li>
         </ul>
         <button type="sumbit" class="btn btn-primary" [disabled]="!characterInfo1" (click)="addInfo1()">submit</button>
-        <p class="card-text">Name above is displayed via one way binding using `interpolation`. Check the code under hero.component.ts and hero.component.html</p>
+        <p class="card-text">
+          
+          Name above is displayed via one way binding using `interpolation`. Check the code under hero.component.ts and hero.component.html.
+          The `angrify` button will change the image.  This is done with two-way binding [(ngModel)].
+
+        </p>
         <button href="#" class="btn btn-danger" (click)="normalize()" *ngIf="showBtnAnger">Angrify</button>
         <button href="#" class="btn btn-primary" (click)="happify()" *ngIf="showBtn">Happify</button>
       </div>
     </div>
   </div>
 
-    <div class="col-4">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="{{imageHappy2}}" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">{{player2}}</h5>
-          <hr>
-          <input type="text" class="form-control" [(ngModel)]="characterInfo2" placeholder="{{player2}} is...">
-          <br>
-          <ul *ngFor="let trait of traits">
-            <li>-{{trait}}</li>
-          </ul>
-          <button type="sumbit" class="btn btn-primary" [disabled]="!characterInfo2" (click)="addInfo2()">submit</button>
-          <p class="card-text">Name above is displayed via one way binding using `interpolation`. Check the code under hero.component.ts and hero.component.html</p>
-          <button href="#" class="btn btn-danger" (click)="normalize2()" *ngIf="showBtnAnger2">Angrify</button>
-          <button href="#" class="btn btn-primary" (click)="happify2()" *ngIf="showBtn2">Happify</button>
-        </div>
-      </div>
-    </div>
+  <div class="col-4">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="{{imageHappy2}}" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">{{player2}}</h5>
+        <hr>
+        <input type="text" class="form-control" [(ngModel)]="characterInfo2" placeholder="{{player2}} is...">
+        <br>
+        <ul *ngFor="let trait of traits">
+          <li>-{{trait}}</li>
+        </ul>
+        <button type="sumbit" class="btn btn-primary" [disabled]="!characterInfo2" (click)="addInfo2()">submit</button>
+        <p class="card-text">
 
-      <div class="col-4">
-        <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="{{imageHappy3}}" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">{{player3}}</h5>
-            <hr>
-            <input type="text" class="form-control" [(ngModel)]="characterInfo3" placeholder="{{player3}} is...">
-            <br>
-            <ul *ngFor="let thing of things">
-              <li>-{{thing}}</li>
-            </ul>
-            <button type="sumbit" class="btn btn-primary" [disabled]="!characterInfo3" (click)="addInfo3()">submit</button>
-            <p class="card-text">Name above is displayed via one way binding using `interpolation`. Check the code under hero.component.ts and
-              hero.component.html</p>
-            <button href="#" class="btn btn-danger" (click)="normalize3()" *ngIf="showBtnAnger3">Angrify</button>
-            <button href="#" class="btn btn-primary" (click)="happify3()" *ngIf="showBtn3">Happify</button>
-          </div>
-        </div>
+          The input field is using `[(ngModel)]="variable"` then the variable is used in the component.ts to print the user input in li tag.
+
+        </p>
+        <button href="#" class="btn btn-danger" (click)="normalize2()" *ngIf="showBtnAnger2">Angrify</button>
+        <button href="#" class="btn btn-primary" (click)="happify2()" *ngIf="showBtn2">Happify</button>
       </div>
     </div>
+  </div>
+
+  <div class="col-4">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="{{imageHappy3}}" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">{{player3}}</h5>
+        <hr>
+        <input type="text" class="form-control" [(ngModel)]="characterInfo3" placeholder="{{player3}} is...">
+        <br>
+        <ul *ngFor="let thing of things">
+          <li>-{{thing}}</li>
+        </ul>
+        <button type="sumbit" class="btn btn-primary" [disabled]="!characterInfo3" (click)="addInfo3()">submit</button>
+        <p class="card-text">
+          There are two types of directives.
+          <u>Structural</u> and <u>attribute directives.</u>
+          <br> Structural directives are ones that changes the structure of the DOM (e.g adds or changes texts, images, delete
+          divs, list values from an array etc..). `*ngIf="variable"` is an example defined in the DOM and the variable manipulated
+          through javascript logic done in the component. `*ngFor="let var of vars"` where var is variable and vars = an
+          array of values, allows for iterating through values in an array and dsiplaying it in the DOM.
+        </p>
+        <button href="#" class="btn btn-danger" (click)="normalize3()" *ngIf="showBtnAnger3">Angrify</button>
+        <button href="#" class="btn btn-primary" (click)="happify3()" *ngIf="showBtn3">Happify</button>
+      </div>
+    </div>
+  </div>
+</div>
