double binding click listener changes the dom

--- a/src/app/traversy/traversy.component.html
+++ b/src/app/traversy/traversy.component.html
@@ -11,5 +11,12 @@ You can geolocate me at ~ google map here soon
     <li>-{{hobby}}</li>
   </ul>
 </div>
+
+<hr>
+
+<div>
+  Click here to say hello! <button (click)="flashMessage()">hello!</button>
+  <h4>{{sayHello}}</h4><span>{{visitors}}</span>
+</div>
 </h4>
 
