--- a/src/app/traversy/traversy.component.html
+++ b/src/app/traversy/traversy.component.html
@@ -1,26 +1,71 @@
-<br><hr>
-<h3>My name's {{interpolation}}</h3>
-<h4>Im a millenial, 1984 so, I am {{age}} on November.
+<hr>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Repetition Is the Greatest Trainer of all...</h1>
+    <p class="lead">Below, Ill add a bootstrap templating but the main focus is the logic and use of the new Angular5 directives (structural and attribute binding). The use of interface (separating properties from an object variable for DRY coding) is at work.
+    </p>
+    <p class="lead">
+      We will use service as an API storage that will be redistributed.  We will be using jsonplaceholder.typicode as a tool to get our endpoint and get sample json data to mimic pulling API from a library.  We will also repeat importing @angular modules to appModule, its decorator and its metadata.
+    </p>
+    <p>
+    All the back ticks are signifying rendering using ngOnInit life-cycle hooks calling typescript variables and logic that creates them.
+    </p>
+  </div>
+</div>
+
+
+<h3>My name's `{{interpolation}}`</h3>
+<h4>Im a millenial, 1984 so, I am `{{age}}` on November.
   <br>
-You can geolocate me at ~ google map here soon 
-  ~<br>{{address.street}} {{address.city}} {{address.state}}
+  Connect with me at: `{{email}}`
+  <br>
+You can geolocate me at `~ google map here soon ~`
+<br>{{address.street}} {{address.city}} {{address.state}}
 
 <div>
   Life is good, I like to...
   <ul *ngFor="let hobby of hobbies; let i = index">
-    <li>-{{hobby}} <button (click)="deleteHobby(hobby)">X</button></li>
+    <li>-`{{hobby}}` <button (click)="deleteHobby(hobby)">X</button></li>
   </ul>
-  <form (submit)="addHobby(hobby.value)">
+  <form (submit)="addHobby(hobby.value)"><!-- #hobby -->
     <input type="text" placeholder="add to my list" #hobby>{{addtoHobbyList}}
     <button>add</button>
   </form>
 </div>
+<hr>
+
+<form>
+  <div>
+    <Label for="interpolation">Name: </Label>
+    <input type="text" ([ngModel])="interpolation" placeholder="{{interpolation}}">
+  </div>
+  <div>
+    <Label for="age">Age: </Label>
+    <input type="number" ([ngModel])="age" name="age">
+  </div>
+  <div>
+    <Label for="email">E-mail: </Label>
+    <input type="text" ([ngModel])="email" name="email">
+  </div>
+  <div>
+    <Label for="street">street: </Label>
+    <input type="text">
+  </div>
+  <div>
+    <Label for="state">State: </Label>
+    <input type="text">
+  </div>
+  <div>
+    <Label for="zipcode">Zipcode: </Label>
+    <input type="text">
+  </div>
+</form>
 
 <hr>
 
 <div>
-  Click here to say hello! <button (click)="flashMessage()">hello!</button>
-  <h4>{{sayHello}}</h4><span>{{visitors}}</span>
+  Click here to say hello! `<button (click)="flashMessage()">hello!</button>`
+  <h4>`{{sayHello}}`<span class="badge">`{{visitors}}`</span></h4>
 </div>
 </h4>
 
