--- a/src/app/traversy/traversy.component.html
+++ b/src/app/traversy/traversy.component.html
@@ -49,8 +49,8 @@
   <form>
     <div>
       <Label for="interpolation">Name: </Label>
-      <input type="text" ([ngModel])="madness" placeholder="{{interpolation}}">
-      <span>{{madness}}</span>
+      <input type="text" ([ngModel])="interpolation" placeholder="{{interpolation}}">
+      <span>{{interpolation}}</span>
     </div>
     <div>
       <Label for="age">Age: </Label>
