--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<ul>
-  <li>
-    <a routerLink="/">Resume PDF</a>
-  </li>
-  <li>
-    <a routerLink="/about">Spirited Away</a>
-  </li>
-  <li>
-    <a routerLink="/heroes">Heroes</a>
-  </li>
-  <li>
-    <a routerLink="/traversy">Traversy</a>
-  </li>
-</ul>
 
-<router-outlet></router-outlet>
+<app-home></app-home>
+
