--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,48 +1,150 @@
-<!-- <div class="container upperBoxes">
-  <div class="container color-dark">
-    <div class="col">
-      <div class="navbar-header">
-        <i class="fab fa-about"></i>
+<nav class="teal" role="navigation">
+  <div class="nav-wrapper container">
+<a id="logo-container" href="#" class="brand-logo">
+  <!-- LOGO IMAGE -->
+  <img id="lifeZoneLogo" src="../../assets/images/LifeZoneLogo.PNG" alt="lifeZoneLogo">
+</a>
+    <ul class="right hide-on-med-and-down">
+      <li>
+        <a routerLink="/">Home</a>
+      </li>
+      <li>
+        <a routerLink="/about">About</a>
+      </li>
+      <li>
+        <a routerLink="/heroes">Events</a>
+      </li>
+      <li>
+        <a routerLink="/traversy">Blogs</a>
+      </li>
+    </ul>
+
+    <ul id="nav-mobile" class="sidenav">
+      <li>
+        <a href="#">Navbar Link</a>
+      </li>
+    </ul>
+    <a href="#" data-target="nav-mobile" class="sidenav-trigger">
+      <i class="material-icons">menu</i>
+    </a>
+  </div>
+</nav>
+  
+
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br>
+        <br>
+        <h1 class="header center teal-text text-lighten-2">LifeZone Triangle</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">Living Life to the Fullest</h5>
+        </div>
+        <div class="row center">
+          <a href="http://facebook.com" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Know More</a>
+        </div>
+        <br>
+        <br>
+
       </div>
     </div>
+    <div class="parallax">
+      <img src="../../assets/images/leaf.jpg" alt="leaf">
+    </div>
   </div>
-</div> -->
 
 
-<div class="resumeContainer">
-  <iframe src="https://drive.google.com/file/d/1Jtc5CJXVwnxr8ytQ-N0YoC8VLjo9I5Gr/preview"></iframe>
-</div>
+  <div class="container">
+    <div class="section">
 
-<hr>
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text">
+              <i class="material-icons">flash_on</i>
+            </h2>
+            <h5 class="center">Speeds up development</h5>
 
+            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components.
+              Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+          </div>
+        </div>
 
-<!-- <div class="menu-item">
-  <a href="#">
-    <span class="somethingAwesome">SOMETHING AWESOME</span>
-  </a>
-</div> -->
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text">
+              <i class="material-icons">group</i>
+            </h2>
+            <h5 class="center">User Experience Focused</h5>
 
+            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates
+              components and animations that provide more feedback to users. Additionally, a single underlying responsive
+              system across all platforms allow for a more unified user experience.</p>
+          </div>
+        </div>
 
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text">
+              <i class="material-icons">settings</i>
+            </h2>
+            <h5 class="center">Easy to work with</h5>
 
-<!-- the animation triggers here: [@goals]="goals.length"-->
-<div class="container color-light" [@goals]="goals.length">
-  <div class="col">
-    <p class="sm">Leave me note &#9749; ({{itemCount}})</p>
-    <form>
-      <!-- adding >>> [(ngModel)]="goalTxt" <<< next line for `two way binding` -->
-      <label for="">Here </label>
-      <input type="text" class="txt" name="item" [placeholder]=gelsMemo [(ngModel)]="goalTxt">
-      <!-- adding an event listener to button  >>> (click)="addItem()" <<< -->
-      <input type="submit" class="btn" name="item" [value]=btn (click)="addItem()">
-    </form>
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are
+              also always open to feedback and can answer any questions a user may have about Materialize.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
-  <div class="col">
-    <!-- ngFor will iterate to goals array -->
-    <p class="life-container" *ngFor="let goals of goals; let i = index" (click)="removeItem(i)">{{goals}}</p>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax">
+      <img src="background2.jpg" alt="Unsplashed background img 2">
+    </div>
   </div>
-  <div class="fullscreen-bg">
-    <video loop muted autoplay class="fullscreen-bg__video">
-      <source src="../assets/images/BlueParticles.mp4" type="video/webm">
-    </video>
+
+  <div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3>
+            <i class="mdi-content-send brown-text"></i>
+          </h3>
+          <h4>Contact Us</h4>
+          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque
+            tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a
+            sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam
+            eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum
+            sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum
+            primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+        </div>
+      </div>
+
+    </div>
   </div>
-</div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax">
+      <img src="background3.jpg" alt="Unsplashed background img 3">
+    </div>
+  </div>
