--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,35 +1,96 @@
-/* You can add global styles to this file, and also import other style files */
-@import url("https://fonts.googleapis.com/css?family=Work+Sans:300,700");
-
-// $BG-Color: lightblue;
-// $Font-color: rgb(238, 121, 121);
-$fontColor: rgba(8, 50, 105, 0.911);
-
-body {
-  // background: $BG-Color;
-  padding: 1em;
-  font-family: "Work Sans", sans-serif;
-  color: $fontColor;
-  font-weight: bold;
+nav ul a,
+nav .brand-logo {
+  color: white;
 }
-ul {
-  list-style-type: none;
-  margin: 0em;
-  padding: 0;
+
+/* Custom Stylesheet */
+
+/**
+ * Use this file to override Materialize files so you can update
+ * the core Materialize files in the future
+ *
+ * Made By MaterializeCSS.com
+ */
+
+p {
+  line-height: 2rem;
+}
+
+.sidenav-trigger {
+  color: #26a69a;
+}
+
+.parallax-container {
+  min-height: 380px;
+  line-height: 0;
+  height: auto;
+  color: rgba(255, 255, 255, .9);
+}
+
+.parallax-container .section {
+  width: 100%;
+}
+
+@media only screen and (max-width: 992px) {
+  .parallax-container .section {
+    position: absolute;
+    top: 40%;
+  }
+  #index-banner .section {
+    top: 10%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #index-banner .section {
+    top: 0;
+  }
+}
+
+.icon-block {
+  padding: 0 15px;
+}
+
+.icon-block .material-icons {
+  font-size: inherit;
+}
+
+footer.page-footer {
+  margin: 0;
+}
+.parallax-container .parallax img {
+  opacity: 1;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+//image logo
+#lifeZoneLogo {
+  height: 10vh;
+  width: 29%;
   position: relative;
-  // float: left;
-  // display: inline-block;
-  left: 0%;
-  // padding-bottom: 1em;
+  float: left;
+  display: block;
+  left: 7%;
+  top: 0vh;
 }
- li {
-  //this actually creates a navbar style for `home` `about` links
-  display: inline;
-  margin-right: 30px;
-  font-size: 1em;
-  color: $fontColor;
+//banner title /organization name
+.teal-text.text-lighten-2 {
+  color: #085851 !important;
+  font-size: 49px !important;
 }
-a {
-  color: hsla(202, 67%, 47%, 0.773);
-  text-decoration: none;
+// font-color on the page
+.row .col.s12 {
+  width: 100%;
+  margin-left: auto;
+  left: auto;
+  right: auto;
+  color: teal;
 }
