remove the button

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,9 +40,9 @@
         <div class="row center">
           <h5 class="header col s12 light">Living Life to the Fullest</h5>
         </div>
-        <div class="row center">
+        <!-- <div class="row center">
           <a href="http://facebook.com" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Know More</a>
-        </div>
+        </div> -->
         <br>
         <br>
 
