--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -145,6 +145,6 @@
     </div>
   </div>
   <div class="parallax">
-    <img src="../../assets/images/secondImage.jpg" alt="leaf">
+    <img src="../../assets/images/praying.jpg" alt="leaf">
   </div>
 </div>
