--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
       <br>
       <h1 class="header center teal-text text-lighten-2">LifeZone Triangle</h1>
       <div class="row center">
-        <h5 class="header col s12 light">Living Life to the Fullest</h5>
+        <h5 class="header col s12 light slogan">Living Life to the Fullest</h5>
       </div>
       <!-- <div class="row center">
           <a href="http://facebook.com" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Know More</a>
