--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,6 +106,11 @@ footer.page-footer {
     left: 7%;
     top: 2vh;
   }
+  .slogan {
+    position: relative !important;
+    top: -2vh !important;
+    left: 20% !important;
+  }
 }
 
 // font-color on the page
