--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,18 +1,51 @@
-<div class="carousel">
-  <a class="carousel-item" href="#one!">
-    <img src="https://lorempixel.com/250/250/nature/1">
-  </a>
-  <a class="carousel-item" href="#two!">
-    <img src="https://lorempixel.com/250/250/nature/2">
-  </a>
-  <a class="carousel-item" href="#three!">
-    <img src="https://lorempixel.com/250/250/nature/3">
-  </a>
-  <a class="carousel-item" href="#four!">
-    <img src="https://lorempixel.com/250/250/nature/4">
-  </a>
-  <a class="carousel-item" href="#five!">
-    <img src="https://lorempixel.com/250/250/nature/5">
-  </a>
-</div>
+<!-- first card -->
 
+<div class="row">
+  <div class="col s3 m4" id="card1">
+    <div class="card">
+      <div class="card-image">
+        <img id="cardPhoto1" src="../../assets/images/praying.jpg">
+        <span class="card-title">Our Story</span>
+        <a class="btn-floating halfway-fab waves-effect waves-light red">
+          <i class="material-icons">add</i>
+        </a>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+          markup to use effectively.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s3 m4" id="card2">
+    <div class="card">
+      <div class="card-image">
+        <img id="cardPhoto1" src="../../assets/images/praying.jpg">
+        <span class="card-title">Our Faith</span>
+        <a class="btn-floating halfway-fab waves-effect waves-light red">
+          <i class="material-icons">add</i>
+        </a>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+          markup to use effectively.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s3 m4" id="card4">
+    <div class="card">
+      <div class="card-image">
+        <img id="cardPhoto1" src="../../assets/images/praying.jpg">
+        <span class="card-title">Our Leaders</span>
+        <a class="btn-floating halfway-fab waves-effect waves-light red">
+          <i class="material-icons">add</i>
+        </a>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little
+          markup to use effectively.</p>
+      </div>
+    </div>
+  </div>
+</div>
