--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,41 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<nav class="teal" role="navigation">
+  <div class="nav-wrapper container">
+    <a id="logo-container" href="#" class="brand-logo">
+      <!-- LOGO IMAGE -->
+      <img id="lifeZoneLogo" src="../../assets/images/LifeZoneLogo.PNG" alt="lifeZoneLogo">
+    </a>
+    <ul class="right hide-on-med-and-down">
+      <li>
+        <a routerLink="/">Home</a>
+      </li>
+      <li>
+        <a routerLink="/about">About</a>
+      </li>
+      <li>
+        <a routerLink="/heroes">Events</a>
+      </li>
+      <li>
+        <a routerLink="/traversy">Blogs</a>
+      </li>
+    </ul>
 
-<app-home></app-home>
+    <ul id="nav-mobile" class="sidenav">
+      <li>
+        <a href="#">Navbar Link</a>
+      </li>
+    </ul>
+    <a href="#" data-target="nav-mobile" class="sidenav-trigger">
+      <i class="material-icons">menu</i>
+    </a>
+  </div>
+</nav>
+
+
+<!-- 👇🏼 this code here where the nav lives, to allow switching between routerLinks -->
+<router-outlet></router-outlet>
+
+
 
 
 
