--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,14 @@
-
-
-
 <div id="index-banner" class="parallax-container">
   <div class="section no-pad-bot">
     <div class="container">
       <br>
       <br>
-      <h1 class="header center teal-text text-lighten-2">LifeZone Triangle</h1>
+      <!-- <h1 class="header center teal-text text-lighten-2">LifeZone Triangle</h1> -->
       <div class="row center">
+        <a id="logo-container" href="#" class="brand-logo">
+          <!-- LOGO IMAGE -->
+          <img id="lifeZoneLogo" src="../../assets/images/LifeZoneLogo.PNG" alt="lifeZoneLogo">
+        </a>
         <h5 class="header col s12 light slogan">Living Life to the Fullest</h5>
       </div>
       <!-- <div class="row center">
@@ -118,4 +119,3 @@
     <img src="../../assets/images/praying.jpg" alt="leaf">
   </div>
 </div>
-
