--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
 <nav class="teal" role="navigation">
   <div class="nav-wrapper container">
     <a id="logo-container" href="#" class="brand-logo">
-      <!-- LOGO IMAGE -->
-      <img id="lifeZoneLogo" src="../../assets/images/LifeZoneLogo.PNG" alt="lifeZoneLogo">
+        LifeZone Triangle
     </a>
     <ul class="right hide-on-med-and-down">
       <li>
@@ -13,7 +12,7 @@
         <a routerLink="/about">About</a>
       </li>
       <li>
-        <a routerLink="/heroes">Events</a>
+        <a routerLink="/events">Events</a>
       </li>
       <li>
         <a routerLink="/traversy">Blogs</a>
