--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,22 +1,22 @@
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
+
 <div class="carousel">
   <a class="carousel-item" href="#one!">
-    <img src="https://lorempixel.com/250/250/nature/1">
+    <img src="../../assets/images/leaf.jpg">
   </a>
   <a class="carousel-item" href="#two!">
-    <img src="https://lorempixel.com/250/250/nature/2">
+    <img src="../../assets/images/leaf.jpg">
   </a>
   <a class="carousel-item" href="#three!">
-    <img src="https://lorempixel.com/250/250/nature/3">
+    <img src="../../assets/images/leaf.jpg">
   </a>
   <a class="carousel-item" href="#four!">
-    <img src="https://lorempixel.com/250/250/nature/4">
+    <img src="../../assets/images/leaf.jpg">
   </a>
   <a class="carousel-item" href="#five!">
-    <img src="https://lorempixel.com/250/250/nature/5">
+    <img src="../../assets/images/leaf.jpg">
   </a>
 </div>
 
-<script>
- document.addEventListener('DOMContentLoaded', function() { var elems = document.querySelectorAll('.carousel'); var instances
-= M.Carousel.init(elems, options); }); // Or with jQuery $(document).ready(function(){ $('.carousel').carousel(); });
-</script>
