--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -36,15 +36,15 @@ p {
   width: 100%;
 }
 
-#lifeZoneLogo {
+#lifeZoneLogo[_ngcontent-c1] {
   height: 25vh;
   width: 50%;
   position: relative;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  left: 96%;
-  top: 0vh;
+  left: 84% !important;
+  top: -1vh !important;
 }
 
 @media only screen and (max-width: 992px) {
@@ -105,6 +105,15 @@ footer.page-footer {
   font-size: 49px !important;
 }
 
+// font-color on the page
+.row .col.s12 {
+  width: 100%;
+  margin-left: auto;
+  left: auto;
+  right: auto;
+  color: teal;
+}
+
 // organization name and logo on iphone 6
 @media only screen and (max-width: 667px) {
   //banner
@@ -127,13 +136,10 @@ footer.page-footer {
     top: -30vh !important;
     left: 18% !important;
   }
-}
-
-// font-color on the page
-.row .col.s12 {
-  width: 100%;
-  margin-left: auto;
-  left: auto;
-  right: auto;
-  color: teal;
+  .section {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    position: relative;
+    top: -21vh;
+  }
 }
