fix media queries

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,11 +26,11 @@
 
 
 <div class="container">
-  <div class="section">
+<div class="section contentBlock">
 
     <!--   Icon Section   -->
     <div class="row">
-      <div class="col s12 m4">
+      <div class="col s12 m12">
         <div class="icon-block">
           <h2 class="center brown-text">
             <i class="material-icons">flash_on</i>
@@ -42,7 +42,7 @@
         </div>
       </div>
 
-      <div class="col s12 m4">
+      <div class="col s12 m12">
         <div class="icon-block">
           <h2 class="center brown-text">
             <i class="material-icons">group</i>
