--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,4 +1,3 @@
-
 // about page styling
 #cardPhoto1 {
   display: block !important;
@@ -21,6 +20,17 @@
   height: 41vh;
 }
 
+image[_ngcontent-c1] img[_ngcontent-c1] {
+  display: block;
+  border-radius: 2px 2px 0 0;
+  position: relative;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 268px !important;
+}
 
 // on iphone6, shrink the cards
 @media only screen and (max-width: 667px) {
@@ -54,16 +64,8 @@
   .card[_ngcontent-c1] {
     margin-left: 2% !important;
     margin-right: 2%;
-  } //logo
-  #lifeZoneLogo {
-    height: 30vh;
-    width: 130%;
-    position: relative;
-    float: left;
-    display: block;
-    left: 9%;
-    top: 2vh;
-  } //logo container
+  }
+   //logo container
   nav .brand-logo {
     left: 33% !important;
     -webkit-transform: translateX(-50%);
