fix cards iamge height

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -4,6 +4,11 @@
   height: 20% !important;
 }
 
+#leaderPhoto {
+  position: relative;
+  height: 269px;
+}
+
 .card {
   margin-left: 1% !important;
 }
