--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,11 +24,11 @@
         <a href="#">Navbar Link</a>
       </li>
     </ul>
-    <a href="#" data-target="nav-mobile" class="sidenav-trigger" (click)="toggle(thisList)">
+    <a href="#" data-target="nav-mobile" class="sidenav-trigger" [hidden]="hideDropDown" (click)="toggle()">
       <i class="material-icons">menu</i>
     </a>
     <!-- hide this, and show it on dropdown button click function -->
-    <ul [hidden]="true" #thisList>
+    <ul [hidden]="hideShow" id="thisList">
       <li>
         <a routerLink="/">Home</a>
       </li>
