--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,5 +7,12 @@
       font-size: 1.1rem;
       padding: 0;
     }
+    #thisList {
+      // display: none;
+      position: absolute;
+      background-color: teal;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
   }
-
