property bidning [property]='variable'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
         <a href="#">Navbar Link</a>
       </li>
     </ul>
-    <a href="#" data-target="nav-mobile" class="sidenav-trigger" [hidden]="hideDropDown" (click)="toggle()">
+    <a href="#" data-target="nav-mobile" class="sidenav-trigger" (click)="toggle()">
       <i class="material-icons">menu</i>
     </a>
     <!-- hide this, and show it on dropdown button click function -->
